feat(SafeVoice): simplify public report flow with single access key
- Use one access key for report submission, tracking, and messaging
- Validate tenantId against active tenants
- Align request/response models with frontend
- Switch report ID to MongoDB ObjectId and keep SV-/HR- caseReference
- Add global exception handler and category label mapping
- Enable DevTools and public SafeVoice endpoints